--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-success">
         <div class="container-fluid text-white">
-          <a class="navbar-brand" href="#">Onomatopia</a>
+          <a class="navbar-brand" href="#">Luxe Salon</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav text-white m-auto">
               <a class="nav-link active text-white text-white" aria-current="page" href="#">Home</a>
-              <a class="nav-link text-white" href="#">About Us</a>
+              <a class="nav-link text-white" href="#">About-Us</a>
               <a class="nav-link text-white" href="#">Contact Us</a>
             </div>
           </div>
